kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  parentRefs:
  - name: web-gateway
    namespace: networking
  hostnames:
  - flux.astxlab.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flux-operator
      port: 9080
      sectionName: astxlab-dev
